# agent-citation

./: README.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  rag_agent_with_citations.py
src/agent_citation/: __init__.py  attribute.py  citation.py  report.py  store.py  validate.py
tests/: test_attribute.py  test_citation.py  test_end_to_end.py  test_report.py  test_store_jsonl.py  test_store_memory.py  test_validate.py
