[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-citation"
version = "0.1.0"
description = "Structured citations for AI agent outputs. Every fact maps to a verifiable source pointer. Zero deps."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" },
]
keywords = ["llm", "agent", "citation", "attribution", "rag", "provenance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-citation"
Repository = "https://github.com/MukundaKatta/agent-citation"
Issues = "https://github.com/MukundaKatta/agent-citation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
